fix(toolkit): resolve stats.json and budget.json update failures by implementing proper hook installation and working around Claude Code bug #9567

--- a/plugins/toolkit/package.json
+++ b/plugins/toolkit/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "watch": "tsc --watch",
     "install-hook": "node install-hook.js",
+    "postinstall": "node install-hook.js",
     "test": "jest",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts"
