--- a/plugins/statusline/scripts/statusline/package.json
+++ b/plugins/statusline/scripts/statusline/package.json
@@ -24,8 +24,9 @@
     "README.md"
   ],
   "devDependencies": {
-    "@types/node": "^20.10.0",
     "@types/better-sqlite3": "^7.6.9",
+    "@types/node": "^20.10.0",
+    "esbuild": "^0.27.2",
     "typescript": "^5.3.3"
   },
   "optionalDependencies": {
