refactor(plugins): migrate mobs to agents and update core skills
- Replace deprecated mobs plugin with new unified agents plugin
- Remove 12 deleted mobs files (-4864 lines)
- Add 82 files with 506 new insertions
- Update core manifest and loader for plugin system
- Add new note commands to basics plugin
- Clean up Windows troubleshooting docs
- Refresh marketplace plugin configuration

--- a/plugins/agents/plugin-manifest.json
+++ b/plugins/agents/plugin-manifest.json
@@ -1,21 +1,18 @@
 {
-  "name": "mobs",
-  "version": "4.1.0",
+  "name": "agents",
+  "version": "4.2.0",
   "description": "Multi-agent orchestration system with spec-first development workflow",
-  "smite": "3.0.0",
+  "smite": "3.5.0",
   "core": "1.0.0",
   "depends": ["core"],
   "provides": [
     "architect",
     "builder",
-    "finalize",
-    "refactor",
-    "note",
     "spec-first",
     "design-workflow"
   ],
   "loadAfter": ["core"],
-  "tags": ["agents", "workflow", "architecture", "implementation", "refactoring"],
+  "tags": ["agents", "workflow", "architecture", "implementation"],
   "author": "Pamacea",
   "license": "MIT"
 }
