--- a/plugins/refactor/plugin-manifest.json
+++ b/plugins/refactor/plugin-manifest.json
@@ -71,7 +71,7 @@
     }
   },
   "deprecations": {
-    "mobs/refactor": {
+    "agents/refactor": {
       "replacedBy": "/refactor",
       "migration": "Use /refactor --full instead of /refactor -a -r -v -x -t",
       "version": "3.2.0"
